--- a/app/notec/src/components/ActionButton/styles.module.sass
+++ b/app/notec/src/components/ActionButton/styles.module.sass
@@ -30,3 +30,11 @@
             background-color: $black!important
             color: $white!important
             border-color: $black
+
+    &.plain
+        border: 0!important
+        color: $black!important
+        text-transform: none
+
+        &:hover
+            background: transparent
