--- a/app/notec/src/components/Profile/Avatar/styles.module.sass
+++ b/app/notec/src/components/Profile/Avatar/styles.module.sass
@@ -1,6 +1,12 @@
 @import ../../../assets/styles/_constants.sass
 
 .AvatarBox
+    border: 1px solid $border-grey
+    border-radius: 100%
+    background-color: $black
+    padding: 3rem
+
     svg, img
+        color: $white
         width: 100%,
         height: 100%
